--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -104,4 +104,91 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+.bg-main {
+  background-color: #8064a2;
+}
+
+.border-main {
+  border: 1px solid #8064a2;
+}
+
+.text-color-main {
+  color: #8064a2;
+}
+
+.bg-second {
+  background-color: #f7f5f9;
+}
+
+.justify-self-left {
+  justify-self: start;
+}
+
+.bg-addNew {
+  background-color: #f7fdff;
+}
+
+.player {
+  height: 100px;
+}
+
+.people {
+  height: 300px;
+}
+
+.social {
+  height: 24px;
+}
+
+.showCard:hover {
+  cursor: pointer;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  gap: 1rem;
+  color: grey;
+}
+
+.card > div {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  border-bottom: 1px solid grey;
+  padding: 0.5rem;
+}
+
+.peopleCard:hover {
+  color: white;
+  background-color: #8064a2;
+  transition: all 0.2s;
+}
+
+.peopleCard:hover > .peopleCardIcon,
+.placeCard:hover > .placeCardIcon,
+.productCard:hover > .productCardIcon, .programCard:hover > .programCardIcon {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(233deg)
+    brightness(104%) contrast(101%);
+}
+
+.placeCard:hover {
+  background-color: #7d9248;
+  color: white;
+  transition: all 0.2s;
+}
+
+.productCard:hover {
+  color: white;
+  background-color: #b25751;
+  transition: all 0.2s;
+}
+
+.programCard:hover {
+  background-color: #4294c3;
+  color: white;
+  transition: all 0.2s;
 }
